# tinyjam

./: .gitignore  CHANGELOG.md  README.md  VERSION  VERSION_BUMP_CHECKLIST.md  arya-curated  dbmi-happyhour  pyproject.toml  tinyjam
assets/aryapproved/: masterlist
assets/aryasjams/: bangers  defense  dinnerparties  kintsugi  masterlist  tocheck
assets/aryasjams/mixtapes/eltiny/mix1/: setlist
assets/aryasjams/mixtapes/lood/: jamlist
assets/aryasjams/mixtapes/slowjamz/mix1/: jamlist  mixlist
src/tinyjam/: __init__.py  __main__.py  cli.py
